Fix: No project links on mobile devices.

--- a/src/container/Projects/Projects.scss
+++ b/src/container/Projects/Projects.scss
@@ -61,13 +61,17 @@
         &:hover {
             box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
         }
+        @media screen and (max-width: 1000px) {
+            width: 35%;
+            
+        }
         @media screen and (min-width: 2000px) {
             padding: 1.25rem;
             border-radius: 0.75rem;
             
         }
-        @media screen and (max-width: 300px) {
-            width: 100%;
+        @media screen and (max-width: 500px) {
+            width: 75%;
             margin: 1rem;
             
         }
@@ -123,6 +127,8 @@
             height: 50%;
             color: var(--white-color);
         }
+
+
     }
 }
 
@@ -146,4 +152,33 @@
         background-color: #fff;
         top: -25px;
     }
+}
+
+.app__project-content-links {
+    display: flex;
+    flex-direction: row;
+    @media (any-hover: hover) {
+        display: none;
+    }
+    div {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        // background-color: rgba(0, 0, 0, 0.5);
+        // color: black;
+        background-color: var(--secondary-color);
+
+        margin: 0.5rem 1.5rem;
+        font-family: var(--font-base);
+        font-weight: 800;
+        transition: all 0.3s ease;
+        svg {
+            width: 50%;
+            height: 50%;
+            color: var(--white-color);
+        }
+
+
+    }
+
 }
